tests/suite/snapshots/suite__check__tests__check__bad_var_shadowing_1.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad_var_shadowing_1.xi:2:5]
   │
 1 │ bar(foo: int) {
   ·     ─┬─  
   ·      ╰─── Previous definition here
 2 │     foo: int
   ·     ─┬─  
   ·      ╰─── Name already bound in environment
───╯

